Ispravci vizualnih elemenata i opisa na administrator_page.html dashboard_ohbp.html observation_ohbp.html observation_patients.html patients.html triage_category.html

--- a/src/main/resources/templates/dashboard_ohbp.html
+++ b/src/main/resources/templates/dashboard_ohbp.html
@@ -137,6 +137,7 @@
       </div>
     </div>
   </div>
+  <div class="p-3 text-muted border-top" ></div>
   <div>
     <div class="container-flex">
       <table class="table table-responsive table-striped">
@@ -209,5 +210,4 @@
   </div>
 </div>
 </body>
-
 </html>
