--- a/src/main/resources/templates/observation_patients.html
+++ b/src/main/resources/templates/observation_patients.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Administrator | OBZ </title>
+    <title> Desktop | OBZ </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
@@ -67,67 +67,81 @@
                 </div>
             </div>
             <div class="text-left d-flex justify-content-center col-md-5 align-items-center" style="">
-                <h1 style="" class="text-primary">
+                <h1 class="display-5 text-primary w-100 d-flex justify-content-center text-left align-items-center flex-grow-1"
+                    style="">
                     <b class="d-flex">Opća bolnica Zabok i bolnica hrvatskih veterana</b></h1>
             </div>
             <div class="d-flex align-items-center justify-content-center col-md-2" style="text-align: center;">
-                <h2 class="flex-grow-1 text-primary" style="text-align: center" contenteditable="true">
+                <h2 class="text-primary flex-grow-1" style="text-align: center" contenteditable="true">
                     <b>25.02.2023&nbsp; </b><b>18:20:35&nbsp;</b></h2>
             </div>
-            <div class="d-flex justify-content-center col-md-2">
-                <h3 class="d-flex align-items-center">
-                    <a href="#" title="krevet" style="text-align: center;">
-                        <img src="../ikone/krevet_ops.webp" class="img-responsive"></a></h3>
+            <div class="col-md-2 d-flex align-items-center justify-content-end">
+                <a href="#" title="krevet" style="text-align: center;">
+                    <img src="../ikone/krevet_ops.webp" class="img-responsive"></a></h3>
             </div>
         </div>
-        <hr class="solid">
-    </div>
-</div>
-<div class="row">
-    <div class="container-flex"></div>
-</div>
-<div class="py-3">
-    <div class="container">
-        <div class="row p-3">
-            <h1 class="text-center text-primary">Prikaz pacijenta koji se nalaze na odjelu opservacije</h1>
+        <div class="p-3 text-muted border-top"></div>
+        <div class="" style="">
+            <div class="container-flex">
+                <div id="element-to-blink" class="toggleBlink">
+                    <h1 class="text-white p-3 d-flex justify-content-center flex-grow-1 align-items-center">ŽIVOTNO
+                        UGROŽENI PACIJENT</h1>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="p-3 text-muted border-top">
-        <div class="container-flex">
-            <div class="table-responsive" draggable="true">
-                <table class="table table-bordered table-striped">
-                    <thead class="thead-dark">
-                    <tr class="display: inline-block">
-                        <th class="font-weight-bold text-center d-flex align-items-center">
-                        </th>
-                    </tr>
-                    </thead>
-                    <thead>
-                    <tr>
-                        <th class="h3 border-0">Trijažna kategorija</th>
-                        <th class="h3">ID</th>
-                        <th class="h3">Vrijeme dolaska</th>
-                        <th class="h3">Lokacija</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="CaseOhbp : ${allCases}" th:class="${CaseOhbp.patientObservation == 0} ? 'hide'">
-                        <td th:text="${CaseOhbp.triageCategory}"
-                            th:style="'background-color: ' + (${CaseOhbp.triageCategory == 1 ? '#FF0000' : CaseOhbp.triageCategory == 2 ? '#FFA500' : CaseOhbp.triageCategory == 3 ? '#FFFF00' : CaseOhbp.triageCategory == 4 ? '#008000' : '#0000FF'}) + '; color: ' + (${CaseOhbp.triageCategory == 1 ? '#FF0000' : CaseOhbp.triageCategory == 2 ? '#FFA500' : CaseOhbp.triageCategory == 3 ? '#FFFF00' : CaseOhbp.triageCategory == 4 ? '#008000' : '#0000FF'})">
-                        </td>
-                        <td class="h2" th:text="${CaseOhbp.caseID}"></td>
-                        <td class="h2" th:text="${CaseOhbp.timeOfArrival}"></td>
-                        <td class="h2" th:text="${CaseOhbp.patientLocation}"></td>
-                    </tr>
-                    </tbody>
-                </table>
-                <div class="p-3 text-muted border-top">
-                    <div class="container-flex">
-                        <div class="row d-flex justify-content-between">
-                            <div class="col-lg-8 col-md-6">
-                                <p class="mb-0"> © OHBP Opća bolnica Zabok i bolnica hrvatskih veterana 2023 || Health
-                                    IT
-                                    Akademija 2023</p>
+        <div class="p-3 text-muted border-top"></div>
+        <div class="container">
+            <div class="row p-3">
+                <h1 class="text-center text-primary">Pacijenti u opservaciji</h1>
+            </div>
+        </div>
+        <div class="p-3 text-muted border-top">
+            <div class="container-flex">
+                <div class="row d-flex justify-content-between"></div>
+            </div>
+        </div>
+        <div class="row">
+        </div>
+        <div class="py-3" style="">
+        </div>
+        <div class="">
+            <div class="container-flex">
+                <div class="table-responsive" draggable="true">
+                    <table class="table table-bordered table-striped">
+                        <thead class="thead-dark">
+                        <tr class="display: inline-block">
+                            <th class="font-weight-bold text-center d-flex align-items-center">
+                            </th>
+                        </tr>
+                        </thead>
+                        <thead>
+                        <tr>
+                            <th class="h3 border-0">Trijažna kategorija</th>
+                            <th class="h3">ID</th>
+                            <th class="h3">Vrijeme dolaska</th>
+                            <th class="h3">Lokacija</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="CaseOhbp : ${allCases}" th:class="${CaseOhbp.patientObservation == 0} ? 'hide'">
+                            <td th:text="${CaseOhbp.triageCategory}"
+                                th:style="'background-color: ' + (${CaseOhbp.triageCategory == 1 ? '#FF0000' : CaseOhbp.triageCategory == 2 ? '#FFA500' : CaseOhbp.triageCategory == 3 ? '#FFFF00' : CaseOhbp.triageCategory == 4 ? '#008000' : '#0000FF'}) + '; color: ' + (${CaseOhbp.triageCategory == 1 ? '#FF0000' : CaseOhbp.triageCategory == 2 ? '#FFA500' : CaseOhbp.triageCategory == 3 ? '#FFFF00' : CaseOhbp.triageCategory == 4 ? '#008000' : '#0000FF'})">
+                            </td>
+                            <td class="h2" th:text="${CaseOhbp.caseID}"></td>
+                            <td class="h2" th:text="${CaseOhbp.timeOfArrival}"></td>
+                            <td class="h2" th:text="${CaseOhbp.patientLocation}"></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <div class="p-3 text-muted border-top">
+                        <div class="container-flex">
+                            <div class="row d-flex justify-content-between">
+                                <div class="col-lg-8 col-md-6">
+                                    <p class="mb-0"> © OHBP Opća bolnica Zabok i bolnica hrvatskih veterana 2023 ||
+                                        Health
+                                        IT
+                                        Akademija 2023</p>
+                                </div>
                             </div>
                         </div>
                     </div>
