--- a/src/main/resources/templates/triage_category.html
+++ b/src/main/resources/templates/triage_category.html
@@ -51,7 +51,7 @@
 <div class="h-20 container-flex">
     <div class="container-flex">
         <div id="md-8" style="" class="row">
-            <div class="col-md-3 d-flex align-items-center justify-content-center" style="" >
+            <div class="col-md-3 d-flex align-items-center justify-content-center" style="">
                 <div class="display-4 p-3 d-flex justify-content-center align-items-center">
                     <a href="#" title="logo" style="text-align: center;" onclick="window.location.href='/'">
                         <img src="../ikone/logo_mali.webp" class="img-responsive"></a>
@@ -77,95 +77,104 @@
     <div class="container-flex">
     </div>
 </div>
-<div class="">
-    <div class="container-flex">
-        <div class="table-responsive">
-            <table class="table table-bordered table-striped">
-                <thead class="thead-dark">
-                <tr class="display: inline-block">
-                    <th class="font-weight-bold text-center d-flex align-items-center">
-                        <h3>Trijažna kategorija</h3>
-                    </th>
-                    <th class="font-weight-bold">
-                        <h3 class=".d-print-table-cell">ID</h3>
-                    </th>
-                    <th class="font-weight-bold">
-                        <h3>Opis</h3>
-                    </th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td class="font-weight-bold" style="background-color: red">
-                        <h3></h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Trijažna kategorija 1</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Postupiti odmah sa ciljem održavanja života pacijenta</h3>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="font-weight-bold" style="background-color:orange">
-                        <h3></h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Trijažna kategorija 2</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Ozbiljno bolestan ili ozlijeđen prijent. Potrebno pristupiti unutar 15 minuta.</h3>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="font-weight-bold" style="background-color:yellow">
-                        <h3></h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Trijažna kategorija 3</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Pacijent s ozbiljnim stanjima, ali trenutno stabilan. Potrebno pristupiti unutar 30 minuta.</h3>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="font-weight-bold" style="background-color:green">
-                        <h3></h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Trijažna kategorija 4</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Standardni pacijent, bez neposredne opasnosti po život. Potrebno pristupiti unutar 60 minuta.</h3>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="font-weight-bold" style="background-color: #2c76f8">
-                        <h3></h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Trijažna kategorija 5</h3>
-                    </td>
-                    <td class="font-weight-bold">
-                        <h3>Pacijenti koji nisu hitni slučajevi i nije im potreban hitna medicinska pomoć. Potrebno pristupiti unutar 120 minuta.</h3>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>
-<div class="py-3">
-    <div class="container">
-        <div class="row">
-        </div>
-    </div>
-</div>
 <div class="p-3 text-muted border-top">
-    <div class="container-flex">
-        <div class="row d-flex justify-content-between">
-            <div class="col-lg-8 col-md-6">
-                <p class="mb-0"> © OHBP Opća bolnica Zabok i bolnica hrvatskih veterana 2023 || Health IT Akademija 2023</p>
+    <h2 draggable="true"> </h2>
+    <h1 style="" class="text-center">Tumač trijažnih kategorija&nbsp;</h1>
+    <div style="">
+        <h1 style="" class="text-center"></h1>
+        <div class="p-3 text-muted border-top">
+        </div>
+        <div class="">
+            <div class="container-flex">
+                <div class="table-responsive" style="">
+                    <table class="table table-bordered table-striped">
+                        <thead class="thead-dark">
+                        <tr class="display: inline-block">
+                            <th class="font-weight-bold text-center d-flex align-items-center">
+                                <h3>Trijažna kategorija</h3>
+                            </th>
+                            <th class="font-weight-bold">
+                                <h3 class=".d-print-table-cell">ID</h3>
+                            </th>
+                            <th class="font-weight-bold">
+                                <h3 >Opis</h3>
+                            </th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td class="font-weight-bold" style="background-color: red">
+                                <h3></h3>
+                            </td>
+                            <td class="font-weight-bold">
+                                <h3>Trijažna kategorija 1</h3>
+                            </td>
+                            <td class="font-weight-bold">
+                                <h3 class="d-flex">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Postupiti odmah sa ciljem održavanja života pacijenta</h3>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="font-weight-bold" style="background-color:orange">
+                                <h3></h3>
+                            </td>
+                            <td class="font-weight-bold">
+                                <h3>Trijažna kategorija 2</h3>
+                            </td>
+                            <td class="font-weight-bold">
+                                <h3 class="d-flex">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Ozbiljno bolestan ili ozlijeđen pacijent.&nbsp;<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Potrebno pristupiti unutar 15 minuta.</h3>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="font-weight-bold" style="background-color:yellow">
+                                <h3></h3>
+                            </td>
+                            <td class="font-weight-bold">
+                                <h3>Trijažna kategorija 3</h3>
+                            </td>
+                            <td class="font-weight-bold">
+                                <h3 class="d-flex">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Pacijent s ozbiljnim stanjima, ali trenutno stabilan.<br>Potrebno pristupiti unutar 30 minuta.</h3>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="font-weight-bold" style="background-color:green">
+                                <h3></h3>
+                            </td>
+                            <td class="font-weight-bold">
+                                <h3>Trijažna kategorija 4</h3>
+                            </td>
+                            <td class="font-weight-bold">
+                                <h3 class="d-flex">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Standardni pacijent, bez neposredne opasnosti po život.<br>&nbsp;Potrebno pristupiti unutar 60 minuta.</h3>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="font-weight-bold" style="background-color: #2c76f8">
+                                <h3></h3>
+                            </td>
+                            <td class="font-weight-bold">
+                                <h3>Trijažna kategorija 5</h3>
+                            </td>
+                            <td class="font-weight-bold">
+                                <h3 class="d-flex">&nbsp; Pacijenti koji nisu hitni slučajevi i nije im potrebna hitna medicinska pomoć.&nbsp;<br>Potrebno pristupiti unutar 120 minuta.</h3>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <div class="py-3">
+            <div class="container">
+                <div class="row">
+                </div>
+            </div>
+        </div>
+        <div class="p-3 text-muted border-top">
+            <div class="container-flex">
+                <div class="row d-flex justify-content-between">
+                    <div class="col-lg-8 col-md-6">
+                        <p class="mb-0"> © OHBP Opća bolnica Zabok i bolnica hrvatskih veterana 2023 || Health IT Akademija 2023</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
