--- a/src/main/resources/templates/administrator_page.html
+++ b/src/main/resources/templates/administrator_page.html
@@ -156,6 +156,7 @@
             </div>
         </div>
     </div>
+    <div class="p-3 text-muted border-top" ></div>
     <div>
         <div class="container-flex">
 
