--- a/src/main/resources/templates/observation_ohbp.html
+++ b/src/main/resources/templates/observation_ohbp.html
@@ -37,7 +37,7 @@
         }
     </style>
     <script>
-        setTimeout(function() {
+        setTimeout(function () {
             window.location.href = "/redirectToDashboardOhbp";
         }, 30000);
     </script>
@@ -46,6 +46,7 @@
             var elementToBlink = document.getElementById("element-to-blink");
             elementToBlink.classList.toggle("blink");
         }
+
         var isBlinking = false;
     </script>
     <style>
@@ -58,13 +59,14 @@
 <body class="container-max-width p-3">
 <nav class="navbar navbar-expand-md navbar" style="">
     <div class="container-flex">
-        <div class="navbar-collapse text-center justify-content-between collapse show" id="navbar2SupportedContent" style="">
+        <div class="navbar-collapse text-center justify-content-between collapse show" id="navbar2SupportedContent"
+             style="">
             <ul class="navbar-nav">
                 <li class="h4 text-light text-center">
                     <a class="nav-link mx-2" onclick="window.location.href='/'">Administrator</a>
                 </li>
                 <li class="h4 text-light text-center d-flex flex-grow-1">
-                    <a class="nav-link mx-2" onclick="window.location.href='/redirectToDashboardOhbp'">OHBP</a>
+                    <a class="nav-link mx-2" onclick="window.location.href='/dashboard_ohbp'">OHBP</a>
                 </li>
                 <li class="h4 text-light text-center d-flex flex-grow-1">
                     <a class="nav-link mx-2" onclick="window.location.href='/obs_ohbp'">OHBP Opservacija</a>
@@ -73,7 +75,8 @@
                     <a class="nav-link mx-2" onclick="window.location.href='/patient_page'">Pacijenti</a>
                 </li>
                 <li class="h4 text-light text-left d-flex flex-grow-1">
-                    <a class="nav-link mx-2" onclick="window.location.href='/redirectToTriageCategory'">Trijažna kategorija</a>
+                    <a class="nav-link mx-2" onclick="window.location.href='/redirectToTriageCategory'">Trijažna
+                        kategorija</a>
                 </li>
                 <li class="h4 text-light text-left d-flex flex-grow-1">
                     <a class="nav-link mx-2" onclick="window.location.href='/obs_patients'">Pacijenti opservacija</a>
@@ -95,7 +98,8 @@
                 </div>
             </div>
             <div class="text-left d-flex justify-content-center col-md-5 align-items-center" style="">
-                <h1 class="display-5 text-primary w-100 d-flex justify-content-center text-left align-items-center flex-grow-1" style="">
+                <h1 class="display-5 text-primary w-100 d-flex justify-content-center text-left align-items-center flex-grow-1"
+                    style="">
                     <b class="d-flex">Opća bolnica Zabok i bolnica hrvatskih veterana</b></h1>
             </div>
             <div class="d-flex align-items-center justify-content-center col-md-2" style="text-align: center;">
@@ -106,19 +110,20 @@
                 <button onclick="blink()">
                     <a> <img src="../ikone/hslucaj.webp" class="img-responsive"></a></button>
             </div>
-
         </div>
         <div class="p-3 text-muted border-top"></div>
         <div class="" style="">
             <div class="container-flex">
                 <div id="element-to-blink" class="toggleBlink">
-                    <h1 class="text-white p-3 d-flex justify-content-center flex-grow-1 align-items-center">ŽIVOTNO UGROŽENI PACIJENT</h1>
+                    <h1 class="text-white p-3 d-flex justify-content-center flex-grow-1 align-items-center">ŽIVOTNO
+                        UGROŽENI PACIJENT</h1>
                 </div>
             </div>
         </div>
+        <div class="p-3 text-muted border-top"></div>
         <div class="container">
             <div class="row p-3">
-                <h1 class="text-center text-primary">Prikaz pacijenta koji se nalaze na odjelu opservacije</h1>
+                <h1 class="text-center text-primary">Pacijenti u opservaciji</h1>
             </div>
         </div>
         <div class="p-3 text-muted border-top">
@@ -142,6 +147,7 @@
                         </thead>
                         <thead>
                         <tr>
+                            <th class="h3">Trijažna kategorija</th>
                             <th class="h3">ID</th>
                             <th class="h3">Ime</th>
                             <th class="h3">Prezime</th>
@@ -151,7 +157,8 @@
                         </thead>
                         <tbody>
                         <tr th:each="CaseOhbp : ${allCases}" th:class="${CaseOhbp.patientObservation == 0} ? 'hide'">
-                            <td th:text="${CaseOhbp.triageCategory}" th:style="'background-color: ' + (${CaseOhbp.triageCategory == 1 ? '#FF0000' : CaseOhbp.triageCategory == 2 ? '#FFA500' : CaseOhbp.triageCategory == 3 ? '#FFFF00' : CaseOhbp.triageCategory == 4 ? '#008000' : '#0000FF'}) + '; color: ' + (${CaseOhbp.triageCategory == 1 ? '#FF0000' : CaseOhbp.triageCategory == 2 ? '#FFA500' : CaseOhbp.triageCategory == 3 ? '#FFFF00' : CaseOhbp.triageCategory == 4 ? '#008000' : '#0000FF'})">
+                            <td th:text="${CaseOhbp.triageCategory}"
+                                th:style="'background-color: ' + (${CaseOhbp.triageCategory == 1 ? '#FF0000' : CaseOhbp.triageCategory == 2 ? '#FFA500' : CaseOhbp.triageCategory == 3 ? '#FFFF00' : CaseOhbp.triageCategory == 4 ? '#008000' : '#0000FF'}) + '; color: ' + (${CaseOhbp.triageCategory == 1 ? '#FF0000' : CaseOhbp.triageCategory == 2 ? '#FFA500' : CaseOhbp.triageCategory == 3 ? '#FFFF00' : CaseOhbp.triageCategory == 4 ? '#008000' : '#0000FF'})">
                             </td>
                             <td class="h2" th:text="${CaseOhbp.caseID}"></td>
                             <td class="h2" th:text="${CaseOhbp.patientFirstName}"></td>
@@ -173,7 +180,8 @@
                 <div class="container-flex">
                     <div class="row d-flex justify-content-between">
                         <div class="col-lg-8 col-md-6">
-                            <p class="mb-0"> © OHBP Opća bolnica Zabok i bolnica hrvatskih veterana 2023 || Health IT Akademija 2023</p>
+                            <p class="mb-0"> © OHBP Opća bolnica Zabok i bolnica hrvatskih veterana 2023 || Health IT
+                                Akademija 2023</p>
                         </div>
                     </div>
                 </div>
@@ -182,5 +190,4 @@
     </div>
 </div>
 </body>
-
 </html>
