--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -84,42 +84,6 @@
 <div class="container-max-width p-3">
     <nav class="navbar navbar-expand-md navbar" style="">
         <div class="container-flex">
-            <div class="navbar-collapse text-center justify-content-between collapse show" id="navbar2SupportedContent"
-                 style="">
-                <ul class="navbar-nav">
-                    <li class="h4 text-light text-center">
-                        <a class="nav-link mx-2"
-                           onclick="window.location.href='/'">Administrator</a>
-                    </li>
-                    <li class="h4 text-light text-center d-flex flex-grow-1">
-                        <a class="nav-link mx-2" onclick="window.location.href='/redirectToDashboardOhbp'">OHBP</a>
-                    </li>
-                    <li class="h4 text-light text-center d-flex flex-grow-1">
-                        <a class="nav-link mx-2" onclick="window.location.href='/redirectToObservationOhbp'">OHBP
-                            Opservacija</a>
-                    </li>
-                    <li class="h4 text-light text-left d-flex flex-grow-1">
-                        <a class="nav-link mx-2" onclick="window.location.href='/patient_page'">Pacijenti</a>
-                    </li>
-                    <li class="h4 text-light text-left d-flex flex-grow-1">
-                        <a class="nav-link mx-2" onclick="window.location.href='/redirectToTriageCategory'">Trijažna
-                            kategorija</a>
-                    </li>
-                    <li class="h4 text-light text-left d-flex flex-grow-1">
-                        <a class="nav-link mx-2" onclick="window.location.href='/obs_patients'">Pacijenti
-                            opservacija</a>
-                    </li>
-
-                    <li class="h4 text-light text-center d-flex">
-                        <a class="nav-link mx-2" onclick="window.location.href='/redirectToLegend'">Legenda</a>
-                    </li>
-                    <li class="h4 text-light text-center d-flex">
-                        <a class="nav-link mx-2" onclick="window.location.href='/redirectToBis'">BIS</a>
-                    </li>
-
-
-                </ul>
-            </div>
         </div>
     </nav>
     <div class="h-20 container-flex">
@@ -156,6 +120,7 @@
             </div>
         </div>
     </div>
+    <div class="p-3 text-muted border-top" ></div>
     <div>
         <div class="container-flex">
 
