--- a/src/main/resources/templates/dashboard_ohbp.html
+++ b/src/main/resources/templates/dashboard_ohbp.html
@@ -111,7 +111,7 @@
         <div class="col-md-3 d-flex align-items-center justify-content-start" style="">
           <div class="display-4 p-3 d-flex justify-content-center align-items-center">
             <a href="#" title="logo" style="text-align: center;" onclick="window.location.href='/'">
-              <img src="../ikone/logo_mali.webp" class="img-responsive"></a>
+              <img src="../ikone/bolnicaLogo.svg" class="img-responsive"></a>
           </div>
         </div>
         <div class="text-left d-flex justify-content-center col-md-5 align-items-center" style="">
@@ -124,7 +124,7 @@
         </div>
         <div class="col-md-2 d-flex align-items-center justify-content-end">
           <button onclick="startBlink()">
-            <a> <img src="../ikone/hslucaj.webp" class="img-responsive"></a></button>
+            <img width="200px" src="../ikone/MediqueLogo.png" class="img-responsive"></a>
         </div>
       </div>
       <hr class="solid">
