--- a/src/main/resources/templates/legend.html
+++ b/src/main/resources/templates/legend.html
@@ -57,7 +57,7 @@
             <div class="col-md-3 d-flex align-items-center justify-content-start" style="">
                 <div class="display-4 p-3 d-flex justify-content-center align-items-center">
                     <a href="#" title="logo" style="text-align: center;" onclick="window.location.href='/'">
-                        <img src="../ikone/logo_mali.webp" class="img-responsive"></a>
+                        <img src="../ikone/bolnicaLogo.svg" class="img-responsive"></a>
                 </div>
             </div>
             <div class="text-left d-flex justify-content-center col-md-5 align-items-center" style="">
@@ -70,7 +70,7 @@
             </div>
             <div class="col-md-2 d-flex align-items-center justify-content-end">
                 <button onclick="blink()">
-                    <a> <img src="../ikone/hslucaj.webp" class="img-responsive"></a></button>
+                    <a> <img width="200px" src="../ikone/MediqueLogo.png" class="img-responsive"></a></button>
             </div>
         </div>
         <hr class="solid">
