--- a/src/main/resources/templates/observation_patients.html
+++ b/src/main/resources/templates/observation_patients.html
@@ -63,7 +63,7 @@
             <div class="col-md-3 d-flex align-items-center justify-content-start" style="">
                 <div class="display-4 p-3 d-flex justify-content-center align-items-center">
                     <a href="#" title="logo" style="text-align: center;" onclick="window.location.href='/'">
-                        <img src="../ikone/logo_mali.webp" class="img-responsive"></a>
+                        <img src="../ikone/bolnicaLogo.svg" class="img-responsive"></a>
                 </div>
             </div>
             <div class="text-left d-flex justify-content-center col-md-5 align-items-center" style="">
