--- a/src/main/resources/templates/dashboard_ohbp.html
+++ b/src/main/resources/templates/dashboard_ohbp.html
@@ -119,8 +119,8 @@
             <b class="d-flex">Opća bolnica Zabok i bolnica hrvatskih veterana</b></h1>
         </div>
         <div class="d-flex align-items-center justify-content-center col-md-2" style="text-align: center;">
-          <h2 class="text-primary flex-grow-1" style="text-align: center" contenteditable="true"></h2>
-          <p>Datum 222 vrijeme</p>
+          <h2 class="text-primary flex-grow-1" style="text-align: center" contenteditable="true">
+            <b>25.02.2023&nbsp; </b><b>18:20:35&nbsp;</b></h2>
         </div>
         <div class="col-md-2 d-flex align-items-center justify-content-end">
           <button onclick="startBlink()">
