Legenada trijaža-ikona

--- a/src/main/resources/templates/legend.html
+++ b/src/main/resources/templates/legend.html
@@ -125,6 +125,19 @@
                 </tr>
                 <tr>
                     <td class="font-weight-bold">
+                        <h3><a href="#" title="hitna"><img src="../ikone/1.webp"></a>
+                        </h3>
+                    </td>
+                    <td class="font-weight-bold">
+                        <h3>PACIJENT TRIJAŽIRAN</h3>
+                    </td>
+                    <td class="font-weight-bold d-flex text-left">
+                        <h3 class="text-nowrap">Pacijent pregledan od strane trijažne sestre. Određena je trijažna kategorija i pacijent je u redu čekanja</h3>
+                    </td>
+                    <td class="font-weight-bold"></td>
+                </tr>
+                <tr>
+                    <td class="font-weight-bold">
                         <h3><a href="#" title="hitna"><img src="../ikone/5.webp"></a>
                         </h3>
                     </td>
