--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -142,12 +142,16 @@
                     </td>
                     <td class="h2" th:text="${CaseOhbp.caseID}"></td>
                     <td class="h2" th:text="${CaseOhbp.timeOfArrival}"></td>
-                    <td class="h2" th:text="${CaseOhbp.patientReTriage}"></td>
-
                     <!--
                     Pokušaj retrijaže u dokumentu adminpage_testiranje.txt
+
                   -->
 
+                    <td class="h2">
+                        <span th:text="${CaseOhbp.completedWork}"></span>
+                        <span> / </span>
+                        <span th:text="${CaseOhbp.workInProgress}"></span>
+                    </td>
                     <td>
                         <img th:if="${CaseOhbp.patientStatus == '0'}" src="/ikone/0.webp" alt="cekaonica/ostalo"/>
                         <img th:if="${CaseOhbp.patientStatus == '1'}" src="/ikone/1.webp" alt="trijaza"/>
