patients.html ID

--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -129,7 +129,7 @@
 
                 <tr>
                     <th class="h3">Trijažna kategorija</th>
-                    <th class="h3">Broj Slučaja</th>
+                    <th class="h3">ID</th>
                     <th class="h3">Vrijeme dolaska</th>
                     <th class="h3">Status</th>
                     <th class="h3">Dijagnostika</th>
