--- a/src/main/resources/templates/administrator_page.html
+++ b/src/main/resources/templates/administrator_page.html
@@ -184,11 +184,11 @@
                     <td class="h2" th:text="${CaseOhbp.caseID}"/>
                     <td class="h2" th:text="${CaseOhbp.patientFirstName}"/>
                     <td class="h2" th:text="${CaseOhbp.patientLastName}"/>
-                    <td class="h2" th:text="${CaseOhbp.timeOfArrival}"/>
+                    <td class="h2" th:text="${#dates.format(CaseOhbp.timeOfArrival, 'dd.MM.yyyy HH:mm:ss')}"></td>
                     <td class="h2" th:text="${CaseOhbp.patientReTriage}"/>
 
                    <!--
-                   Pokušaj retrijaže u dokumentu adminpage_testiranje.txt
+
 
                  -->
 
