--- a/src/main/resources/templates/administrator_page.html
+++ b/src/main/resources/templates/administrator_page.html
@@ -235,7 +235,7 @@
                     <!-- printanje  -->
                     <td>
                         <span th:text="${CaseOhbp.caseID}" id="cellId"></span>
-                        <button onclick="printCell()" id="printButton">Print</button>
+                        <button onclick="window.location.href='/printID'" id="printButton">Print</button>
                     </td>
                     <script>
                         function printCell() {
